# rust-synthesizer-wasm

./: Cargo.toml  README.md  build.sh  index.html
.github/workflows/: deploy.yml
assets/: box.aseprite  rack.aseprite
src/: lib.rs  main.rs  wasm_audio.rs  wasm_graphics.rs  wasm_input.rs  wasm_sprites.rs
src/audio/: mixer.rs  mod.rs
src/effects/: delay.rs  flanger.rs  mod.rs  reverb.rs
src/graphics/: constants.rs  draw.rs  mod.rs  sprites.rs  waveform_display.rs
src/input/: handler.rs  mod.rs
src/input/commands/: adsr_control.rs  effects_toggle.rs  keyboard_input.rs  mod.rs  mouse_input.rs  octave_adjust.rs  recording_control.rs  track_control.rs  waveform_toggle.rs
src/midi/: export.rs  import.rs  mod.rs
src/music_theory/: note.rs
src/state/: event_loop.rs  mod.rs  structs.rs  utils.rs
src/state/updaters/: audio_updater.rs  mod.rs  mouse_updater.rs  recording_updater.rs  visual_updater.rs
src/waveforms/: adsr_envelope.rs  mod.rs  sawtooth_wave.rs  triangle_wave.rs
